--- a/Simu_Fourmi.cbp
+++ b/Simu_Fourmi.cbp
@@ -14,6 +14,11 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="../../SFML-2.4.2/lib/libsfml-graphics-d.a" />
+					<Add library="../../SFML-2.4.2/lib/libsfml-window-d.a" />
+					<Add library="../../SFML-2.4.2/lib/libsfml-system-d.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Simu_Fourmi" prefix_auto="1" extension_auto="1" />
@@ -31,6 +36,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-DSFML_STATIC" />
 		</Compiler>
 		<Unit filename="Coord.hpp" />
 		<Unit filename="Fourmi.cpp" />
